name:           CoeGSS-Chalmers-DSL
version:        0.1.0.0
-- synopsis:
-- description:
homepage:       https://github.com/githubuser/CoeGSS-Chalmers-DSL#readme
license:        GPL-3
license-file:   LICENSE
author:         Author name here
maintainer:     example@example.com
copyright:      2018 Author name here
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:  README.md

library
  hs-source-dirs: src
  build-depends:
      base >=4.7 && <5,
      mtl        >=2.2,
      QHaskell,
      language-c-quote >= 0.8,
      mainland-pretty  >= 0.6,
      template-haskell >= 2.10,
      srcloc >= 0.5,
      aeson,
      aeson-pretty,
      unordered-containers,
      bytestring,
      vector

  exposed-modules:
      DSL, DSLExamples, C
  other-modules:
      NameMonad
  default-language: Haskell2010
